[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"
authors = ["{{ authors }}"]
license = "{{ license }}"

{% if use_workspaces -%}
[workspace]
members = ["crates/*"]

[workspace.dependencies]
{% endif -%}

{% if crate_type != "lib" -%}
[[bin]]
name = "{{ project-name }}"
path = "bin/main.rs"
{% endif %}
[lib]
name = "{{ crate_name }}"
path = "src/lib.rs"

[dependencies]
